# nox

./: .gitignore  .travis.yml  LICENSE  README.rst  default.nix  requirements.txt  setup.cfg  setup.py
nox/: cache.py  enumerate_tests.nix  main.py  nixpkgs_repo.py  review.py  search.py  update.py
nox/tests/: test_review.py
