[metadata]
name = nix-nox
version = 0.0.1
author = Georges Dubus
author-email = georges.dubus@compiletoi.net
summary = Tools to make nix nicer to use
description-file = README.rst
license = BSD
classifer =
  Development Status :: 3 - Alpha
  Programming Language :: Python :: 3

[files]
packages = nox

[entry_points]
console_scripts =
    nox = nox.search:main
    nox-update = nox.update:main
    nox-review = nox.review:cli
